# spot_teleop

./: .gitignore  Dockerfile.multi_orbslam  GITHUB_SETUP.md  LARGE_FILES.md  check_cleanup_status.sh  clean_git_history.sh  clean_history.sh  fix_nested_git.sh  fix_permissions_and_clean.sh  plan to continue  run_multi_orbslam.sh
_multi_orbslam_ws/: Dockerfile.multi_orbslam
_multi_orbslam_ws/devel/: .catkin
_multi_orbslam_ws/src/ORB_SLAM3/: CMakeLists.txt
cpp/ORB_SLAM3/: CMakeLists.txt
cpp/xtion_multi/: xtion_enumerate  xtion_enumerate.cpp  xtion_snapshot  xtion_snapshot.cpp
docs/setup/: 0_quickref.txt  10_orbslam3_w_xtion_rosbags_generalizable  11_orbslam hand eye calibration ransac trajectories  1_ros_setup  2_setup_xtion  3_setup_xtion_ros_single  4_setup_xtion_ros_multi  5_xtion_assignment  6_orbslam3_xtion  7_xtion_record.md  8_orbslam3_w_xtion_rosvbags  9_orbslam3_w_xtion_rosbags_repair
system_ws/: CALIBRATION_README.md  KeyFrameTrajectory.txt  extrinsic_camera_calibration.sh  gdb_commands.txt  orbslam_bag_processor.sh  run_debug.sh  run_rgbd_gdb.sh  test_fixed_rgbd.sh
system_ws/install/: local_setup.sh  setup.sh
system_ws/install/xtion_bringup/share/xtion_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
system_ws/install/xtion_bringup/share/xtion_bringup/config/: xtion_cameras.yaml  xtion_mapping.yaml
system_ws/log/: latest_build
system_ws/scripts/: bag_camera_mapper_gui.py  calibrate_cameras_from_trajectories.py  generate_orbslam_configs.py  trajectory_utils.py
system_ws/xtion_test_bag/: metadata.yaml
(+52 files in other folders)
